--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,4 @@ CLOUDINARY_API_SECRET=fqAcmPNQ10zgY83ocP_-tBY2wKI
 GEMINI_API_KEY=AIzaSyDf1e-KVu9uH9sujzoF6SDYwaz_k7eXSF0
 MONGO_URI=mongodb+srv://godzilla01011999_db_user:hCoslYSjMsDO4nso@cluster0.x3pcd69.mongodb.net/?appName=Cluster0
 JWT_SECRET=super_secure_civiclens_jwt_key
+VITE_API_BASE_URL=https://civiclens-ai.onrender.com
